--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
             <p>Captions are generally given in the same language as the original content. It includes relevant sound effects or background noises because the intended audience is those who cannot hear the audio for some reasons.</p>
             <!-- TODO: Put the dog video here. Set the width to 400 pixels and include controls -->
             <!-- Include a track tag with the src attribute set to "dog-video.vtt" -->
-        </div>
+
+            <video controls width="400">
+                <source src="./assets/videos/dog-video.mp4">
+                <track src="./assets/text-tracks/dog-video.vtt" kind="captions" srclang="en" label="English">
+            </video>
+
+
+            
+            <video controls width="400>"
+                <source src="./assets/videos/pigeons-in-love.mp4">
+                <track src="./assets/text-tracks/pigeons-in-love.vtt" kind="subtitles" srclang="en" label="English">      
+                <track src="./assets/text-tracks/pigeons-in-love-sp.vtt" kind="subtitles" srclang="sp" label="Spanish">
+
+            
+            </div>
         <div>
             <h2>Subtitles</h2>
             <p>Subtitles are typically provided in a language other than the original content and are intended for people who are not speakers of the language that the original content is being served in.</p>
